--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,9 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "wp-cli/wp-cli": "^2.5",
     "wpackagist-theme/wpcstore": "^1.1",
-    "wpackagist-plugin/woocommerce": "^5.5"
+    "wpackagist-plugin/woocommerce": "^5.5",
+    "wpackagist-plugin/stripe": "^2.6",
+    "wpackagist-plugin/woocommerce-gateway-stripe": "^5.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
